css/styles.css
/*colors:  
#FFFFFF - white background
#F8F8F8 - gray background
#1B1C21 - text color black
#7E7E82 - text color gray
#B8FFEC - focus border green
#41F6D7 - bright green for icons
#FF3E79 - pink for icons*/
::-webkit-scrollbar {
   width: 0;
 }
.screen1__scroll::-moz-scrollbar
{
width: 0px;
height: 0px;
}
html {
   -ms-overflow-style: none;
   overflow-y: scroll;
   scrollbar-width: none;
}
body {
   overflow: hidden;
}
main {
   overflow: hidden;
}
button {
   background-color: transparent;
}
/*! HEADER*/
.header {
   background-color: #FFFFFF;
   width: 100%;
   height: 88px;
}
.navbar {
   height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
}
.icon {
   display: none;
   min-width: 40px;
   min-height: 40px;
   background-repeat: no-repeat;
   cursor: pointer;
}
.navbar__burger, .navbar__search, .navbar__call, 
.navbar__message, .navbar__contact, .navbar__request, .navbar__repair{
   margin-right: 16px;
}
.navbar__burger{
   display: block;
   margin-left: 16px;
   background: url(../img/burger.svg);
}
.navbar__search{
   background-image: url(../img/search.svg);
}
.navbar__call{
   background-image: url(../img/call.svg);
}
.navbar__message{
   background-image: url(../img/chat.svg);
}
.navbar__contact{
   background-image: url(../img/profile.svg);
}
.navbar__request{
   display: block;
   margin-left: auto;
   background-image: url(../img/repair.svg);
}
.navbar__request::before {
   content: "";
   display: block;
   background-color: #EAEAEA;
   width: 2px;
   height: 32px;
   transform: translateX(-16px);
}
.navbar__repair{
   display: block;
   background-image: url(../img/checkstatus.svg);
}
.navbar__logo {
   min-width: 96.55px;
   min-height: 50.81px;
   height: 50px;
   background-image: url(../img/logo.svg);
}
.navbar__button-text {
   display: none;
   font-size: 16px;
}
/*! SCREEN 1*/
.screen1 {
   background-color: #F8F8F8;
   width: 100%;
   margin: 0;
   padding: 0;
   overflow: hidden;
}
.screen1__title-container {
   display: flex;
   align-items: center;
   padding-top: 24px;
   margin-left: -4px;
}
.screen1__title-container::before {
   content: "";
   width: 8px;
   height: 40px;
   margin-right: 16px;
   border-radius: 10px;
   background-color: #41F6D7;
}
.title {
   font-size: 28px;
   font-weight: 700;
}
.screen1__scroll{
   margin: 0;
   display: flex;
   overflow: auto;
   width: 100%;
   padding: 24px 16px 0 16px;
   -ms-overflow-style: none; /* IE 11 */
   scrollbar-width: none; /* Firefox 64 */
}
.screen1__scroll::before {
   content: "";
   display: block;
   width: 100%;
   height: 40px;
   background: linear-gradient(90deg, rgba(255,0,0,0) 80%, rgb(248, 248, 248) 100%);;
   position: absolute;
   z-index: 2;
}
.screen1__subheader-container {
   min-height: 40px;
   padding: 0 22px;
   border: 2px solid transparent;
   white-space: nowrap;
   margin-left: 2px;
   margin-right: 2px;
   display: flex;
   align-items: center;
   border-radius: 6px;
   cursor: pointer;
}
.screen1__subheader-container-active {
   border: 2px solid #B8FFEC;
   background-color: #FFFFFF;
}
.screen1__subheader-container:hover {
   background-color: #FFFFFF;
}
.screen1__subheader {
   z-index: 1;
   text-transform: capitalize;
   display: block;
}
.subheader {
   font-size: 16px;
   font-weight: 500;
   color: #7E7E82;
}
.screen1__article {
   padding-bottom: 36px;
}
.screen1__logo-photo {
   width: 100%;
   height: auto;
}
.screen1__paragraf {
   max-height: 90px;
   overflow: hidden;
   margin-right: 16px;
   margin-left: 16px;
   line-height: 18px;
   white-space: pre-line;
}
.screen1__read-more {
   font-size: 14px;
   display: flex;
   width: 132px;
   height: 24px;
   margin: 16px 0 16px 30px;
   align-items: center;
   font-weight: 500;
   background: none;
}
.screen1__read-more::before {
   content: "";
   width: 7px;
   height: 7px;
   margin-right: 16px;
   border-bottom: 2px solid #41F6D7;
   border-right: 2px solid #41F6D7;
   box-shadow: 2px 2px 0 0 #F8F8F8,
   4px 4px 0 0 #41F6D7;
   transform: translate(0, -5px) rotate(45deg);
}
.screen1__drop-down {
   width: 24px;
   height: 24px;
}
.screen1__drop-line {
   margin: auto;
   width: 9px;
   height: 9px;
   transform: rotate(45deg);
   border-radius: 1px;
   border-right: 3px solid #41F6D7;
   border-bottom: 3px solid #41F6D7;
}

@media (min-width:768px) {
   /*!NAVBAR*/
   .navbar__burger{
      margin-right: 20px;
   }
   .navbar__burger::after {
      content: "";
      background-color: #EAEAEA;
      display: block;
      width: 2px;
      height: 32px;
      transform: translateX(60px);
   }
   .navbar__logo {
      margin-left: 20px;
   }
   .navbar__call{
      display: block;
      margin-left: auto;
   }
   .navbar__message{
      display: block;
   }
   .navbar__contact{
      display: block;
      margin-right: 20px;
   }
   .navbar__request{
      margin-left: 20px;
   }
   .navbar__request::before {
      transform: translate(-20px);
   }
   /*!SCREEN1*/
   .screen1__title-container::before {
      margin-right: 20px;
   }
   .screen1__scroll, .screen1__paragraf {
      padding-left: 24px;
   }
   .screen1__article {
      display: flex;
      padding-bottom: 40px;
      padding-right: 24px;
   }
   .screen1__paragraf {
      padding-left: 24px;
      margin-left: 0;
      min-height: 160px;
   }
   .screen1__logo-photo {
      border-radius: 5px;
      width: 100%;
      min-width: 40%;
      height: 100%;
   }
}
@media (min-width: 1120px)
{
   /*!NAVBAR*/
   .header {
      height: 42px;
      background-color: #F8F8F8;
      padding-right: 32px;
   }
   .navbar {
      justify-content: right;
   }
   .navbar__burger, .navbar__logo, .navbar__call, .navbar__message, .navbar__contact{
      display: none;
   }
   .navbar__burger::after, .navbar__request::before  {
      display: none;
   }
   .navbar__button-text {
      display: inline-block;
      width: 100%;
      text-align: left;
   }
   .navbar__request, .navbar__repair{
      width: 173px;
      background-position: 100% 100%;
      margin:  82px 0 0 32px;
   }
   .navbar__repair {
      width: 168px;      
   }
   .navbar__icon {
      background-position: 100% 100%;
      position: relative;
   }
   .navbar__icon-text {
      display: block;
      background-color: #F8F8F8;
      position: absolute;
      top: 13px;
   }
   /*!SCREEN1*/
   .screen1__title-container::before {
      margin-right: 30px;
   }
   .screen1__title-container {
      padding: 0;
   }
   .screen1__scroll {
      width: 95%;
      padding-left: 32px;
      overflow: none;
      flex-wrap: wrap;
   }
   .screen1__scroll::before {
      display: none;
   }
   .screen1__article {
      display: flex;
      padding: 7px 32px 49px 34px;
   }
   .screen1__paragraf {
      margin-top: 16px;
      padding: 0;
   }
   .screen1__read-more {
      margin-left: 5px;
   }
   .screen1__logo-photo {
      width: 50%;
      border-radius: 10px;
      margin-left: 36px;
   }
}

